--- a/iRadio/Base.lproj/Main.storyboard
+++ b/iRadio/Base.lproj/Main.storyboard
@@ -18,15 +18,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wQN-cU-Fb3">
-                                <rect key="frame" x="200" y="464" width="200" height="36"/>
+                                <rect key="frame" x="250" y="420" width="100" height="80"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.98431372549019602" green="0.67450980392156867" blue="0.13333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="36" id="fKN-e6-bmj"/>
-                                    <constraint firstAttribute="width" constant="200" id="nfP-Ty-kuq"/>
+                                    <constraint firstAttribute="height" constant="80" id="fKN-e6-bmj"/>
+                                    <constraint firstAttribute="width" constant="100" id="nfP-Ty-kuq"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
-                                <state key="normal" title="Button">
+                                <state key="normal" title="Pause">
                                     <color key="titleColor" red="0.98632120316941552" green="1" blue="0.97328417706336612" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -34,13 +34,13 @@
                                     <action selector="PlayAction" destination="4gy-Az-KVp" eventType="touchUpInside" id="we0-9q-JO5"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vinha-fm-goiania" translatesAutoresizingMaskIntoConstraints="NO" id="jJL-2D-iML">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="videira" translatesAutoresizingMaskIntoConstraints="NO" id="jJL-2D-iML">
                                 <rect key="frame" x="151" y="236" width="298" height="128"/>
                                 <animations/>
                             </imageView>
                         </subviews>
                         <animations/>
-                        <color key="backgroundColor" red="0.35686274509803922" green="0.12549019607843137" blue="0.396078431372549" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.67450980392156867" green="0.30196078431372547" blue="0.60392156862745094" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="jJL-2D-iML" firstAttribute="centerY" secondItem="EWM-3N-TMI" secondAttribute="centerY" id="BBL-ok-Ctp"/>
                             <constraint firstItem="wQN-cU-Fb3" firstAttribute="top" secondItem="jJL-2D-iML" secondAttribute="bottom" constant="100" id="GS3-ZC-XLS"/>
@@ -59,6 +59,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="vinha-fm-goiania" width="298" height="288"/>
+        <image name="videira" width="383" height="383"/>
     </resources>
 </document>
